# AstraQ

./: README.md
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/: Dockerfile  alembic.ini  pyproject.toml
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/alembic/: env.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/alembic/versions/: 0fef2983039a_add_research_papers_files_folders_tags_.py  ab0f7f1414de_add_users_sessions_user_preferences_.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/app/: __init__.py  main.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/app/ai/: provider.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/app/api/: deps.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/app/core/: audit.py  config.py  cookies.py  csrf.py  email.py  exceptions.py  logging.py  rate_limit.py  security.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/astrasphere-foundation/backend/tests/: conftest.py  test_activity_logs.py  test_ai_jobs.py  test_auth.py  test_bookmarks.py  test_chat.py  test_error_handling.py  test_files.py  test_folders.py  test_health.py  test_migrations.py  test_notifications.py  test_papers.py  test_repositories.py  test_route_protection.py  test_security.py  test_tags.py  test_teams.py  test_user.py  test_validation.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/alembic/: env.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/alembic/versions/: 0001_initial_schema.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/: main.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/api/: deps.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/core/: config.py  logging.py  security.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/db/: base.py  session.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/models/: research.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/schemas/: research.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/app/services/: qdrant_client.py  redis_client.py
astrasphere-quantum-research-os/astrasphere-quantum-research-os/backend/tests/: conftest.py  test_health.py  test_research_schema.py
(+210 files in other folders)
