[project]
name = "astrasphere-backend"
version = "0.1.0"
description = "AstraSphere Quantum Research OS - Backend API"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "alembic>=1.13.2,<2.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "redis>=5.0.8,<6.0.0",
    "qdrant-client>=1.11.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "structlog>=24.4.0,<25.0.0",
    "httpx>=0.27.2,<0.28.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<4.1.0",
    "python-multipart>=0.0.9,<0.1.0",
    "tenacity>=9.0.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2,<9.0.0",
    "anyio>=4.4.0,<5.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.2,<0.28.0",
    "ruff>=0.6.9,<0.7.0",
    "mypy>=1.11.2,<2.0.0",
    "types-python-jose>=3.3.4,<4.0.0",
    "types-passlib>=1.7.7,<2.0.0",
    "black>=24.8.0,<25.0.0",
    "pre-commit>=3.8.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S107"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
